fix: success and fail popup on mobile

--- a/src/blocks/login/__result/_text/login__result_text.css
+++ b/src/blocks/login/__result/_text/login__result_text.css
@@ -12,5 +12,7 @@
   .login__result_text {
     font-size: 20px;
     line-height: 24px;
+    margin-top: 40px;
+    margin-bottom: 50px;
   }
 }
