--- a/src/blocks/login/__result/login__result.css
+++ b/src/blocks/login/__result/login__result.css
@@ -7,3 +7,8 @@
   margin-right: auto;
 }
 
+@media screen and (max-width: 630px) {
+  .login__result {
+    margin-top: 50px;
+  }
+}
